// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array integration 1 1`] = `
{
  "posts": {
    "nodeType": "components.array.table",
    "keyName": "posts",
    "children": [
      {
        "nodeType": "components.object.fieldset",
        "keyName": "status",
        "children": [
          {
            "nodeType": "components.boolean.switch",
            "keyName": "isDraft"
          }
        ]
      }
    ]
  }
}
`;

exports[`array integration 2 1`] = `
{
  "posts": {
    "nodeType": "components.array.table",
    "keyName": "posts",
    "children": [
      {
        "nodeType": "components.string.input",
        "keyName": "content"
      },
      {
        "nodeType": "components.object.fieldset",
        "keyName": "buttons",
        "children": [
          {
            "nodeType": "components.boolean.switch",
            "keyName": "isDraft"
          }
        ]
      },
      {
        "nodeType": "components.object.fieldset",
        "keyName": "otherinfo",
        "children": [
          {
            "nodeType": "components.string.input",
            "keyName": "address"
          },
          {
            "nodeType": "components.string.input",
            "keyName": "introduction"
          }
        ]
      }
    ]
  }
}
`;

exports[`complex schema integration 1 1`] = `
{
  "posts": {
    "nodeType": "components.array.table",
    "keyName": "posts",
    "children": [
      {
        "nodeType": "components.object.fieldset",
        "keyName": "status",
        "children": [
          {
            "nodeType": "components.dateTime.dateTime",
            "keyName": "createAt"
          },
          {
            "nodeType": "components.number.input",
            "keyName": "draft"
          }
        ]
      },
      {
        "nodeType": "components.string.input",
        "keyName": "featureImage"
      },
      {
        "nodeType": "components.object.fieldset",
        "keyName": "pageProperty",
        "children": [
          {
            "nodeType": "components.number.input",
            "keyName": "onTop"
          },
          {
            "nodeType": "components.number.input",
            "keyName": "order"
          }
        ]
      },
      {
        "nodeType": "components.object.fieldset",
        "keyName": "share",
        "children": [
          {
            "nodeType": "components.number.input",
            "keyName": "showShareBottom"
          },
          {
            "nodeType": "components.number.input",
            "keyName": "showGoodBottom"
          }
        ]
      },
      {
        "nodeType": "components.object.fieldset",
        "keyName": "other",
        "children": [
          {
            "nodeType": "components.string.input",
            "keyName": "introduction"
          },
          {
            "nodeType": "components.geoPoint.default",
            "keyName": "position"
          }
        ]
      }
    ]
  },
  "info": {
    "nodeType": "components.object.fieldset",
    "keyName": "info",
    "children": [
      {
        "nodeType": "components.string.input",
        "keyName": "name"
      },
      {
        "nodeType": "components.string.input",
        "keyName": "description"
      },
      {
        "nodeType": "components.object.fieldset",
        "keyName": "info",
        "children": [
          {
            "nodeType": "components.object.fieldset",
            "keyName": "info2",
            "children": [
              {
                "nodeType": "components.string.input",
                "keyName": "name2"
              }
            ]
          }
        ]
      }
    ]
  },
  "popup": {
    "nodeType": "components.array.table",
    "keyName": "popup",
    "children": [
      {
        "nodeType": "components.string.input",
        "keyName": "name"
      }
    ]
  },
  "tab": {
    "nodeType": "components.array.tab",
    "keyName": "tab",
    "children": [
      {
        "nodeType": "components.string.input",
        "keyName": "name"
      }
    ]
  },
  "undefined": {
    "nodeType": "components.array.table",
    "children": [
      {
        "nodeType": "components.string.input",
        "keyName": "name"
      }
    ]
  }
}
`;

exports[`complex schema integration 2 1`] = `
{
  "info": {
    "nodeType": "components.object.fieldset",
    "keyName": "info",
    "children": [
      {
        "nodeType": "components.string.input",
        "keyName": "name"
      },
      {
        "nodeType": "components.string.input",
        "keyName": "nickname"
      },
      {
        "nodeType": "components.string.input",
        "keyName": "test"
      },
      {
        "nodeType": "components.object.fieldset",
        "keyName": "thumbnail",
        "children": [
          {
            "nodeType": "components.string.input",
            "keyName": "imageName"
          },
          {
            "nodeType": "components.file.file",
            "keyName": "imageSrc"
          }
        ]
      },
      {
        "nodeType": "components.object.fieldset",
        "keyName": "contactInfo",
        "children": [
          {
            "nodeType": "components.array.table",
            "keyName": "phones",
            "children": [
              {
                "nodeType": "components.string.select",
                "keyName": "type"
              },
              {
                "nodeType": "components.string.input",
                "keyName": "value"
              }
            ]
          },
          {
            "nodeType": "components.array.table",
            "keyName": "addresses",
            "children": [
              {
                "nodeType": "components.string.select",
                "keyName": "type"
              },
              {
                "nodeType": "components.string.input",
                "keyName": "value"
              }
            ]
          },
          {
            "nodeType": "components.array.table",
            "keyName": "emails",
            "children": [
              {
                "nodeType": "components.string.select",
                "keyName": "type"
              },
              {
                "nodeType": "components.string.input",
                "keyName": "value"
              }
            ]
          }
        ]
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object 
  integration 6 1`] = `
{
  "info": {
    "nodeType": "components.object.fieldset",
    "keyName": "info",
    "children": [
      {
        "nodeType": "components.object.fieldset",
        "keyName": "info1",
        "children": [
          {
            "nodeType": "components.object.fieldset",
            "keyName": "info2",
            "children": [
              {
                "nodeType": "components.string.input",
                "keyName": "name3"
              }
            ]
          }
        ]
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object integration 1 1`] = `
{
  "info": {
    "nodeType": "components.object.fieldset",
    "keyName": "info",
    "children": [
      {
        "nodeType": "components.string.input",
        "keyName": "name"
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object integration 2 1`] = `
{
  "info": {
    "nodeType": "components.object.fieldset",
    "keyName": "info",
    "children": [
      {
        "nodeType": "components.string.input",
        "keyName": "name"
      },
      {
        "nodeType": "components.string.input",
        "keyName": "nickname"
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object integration 3 1`] = `
{
  "info": {
    "nodeType": "components.object.fieldset",
    "keyName": "info",
    "children": [
      {
        "nodeType": "components.string.input",
        "keyName": "name"
      },
      {
        "nodeType": "components.string.input",
        "keyName": "nickname"
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object integration 4 1`] = `
{
  "info": {
    "nodeType": "components.object.fieldset",
    "keyName": "info",
    "children": [
      {
        "nodeType": "components.object.fieldset",
        "keyName": "info1",
        "children": [
          {
            "nodeType": "components.string.input",
            "keyName": "name"
          }
        ]
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object integration 5 1`] = `
{
  "info": {
    "nodeType": "components.object.fieldset",
    "keyName": "info",
    "children": [
      {
        "nodeType": "components.object.fieldset",
        "keyName": "info1",
        "children": [
          {
            "nodeType": "components.string.input",
            "keyName": "name"
          }
        ]
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object integration 7 1`] = `
{
  "info": {
    "nodeType": "components.object.fieldset",
    "keyName": "info",
    "children": [
      {
        "nodeType": "components.string.input",
        "keyName": "name"
      },
      {
        "nodeType": "components.string.input",
        "keyName": "description"
      },
      {
        "nodeType": "components.object.fieldset",
        "keyName": "info",
        "children": [
          {
            "nodeType": "components.object.fieldset",
            "keyName": "info2",
            "children": [
              {
                "nodeType": "components.string.input",
                "keyName": "name2"
              }
            ]
          }
        ]
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object integration 8 1`] = `
{
  "info": {
    "nodeType": "components.object.fieldset",
    "keyName": "info",
    "children": [
      {
        "nodeType": "components.string.input",
        "keyName": "name"
      },
      {
        "nodeType": "components.string.input",
        "keyName": "description"
      },
      {
        "nodeType": "components.object.fieldset",
        "keyName": "info",
        "children": [
          {
            "nodeType": "components.object.fieldset",
            "keyName": "info2",
            "children": [
              {
                "nodeType": "components.string.input",
                "keyName": "name2"
              }
            ]
          }
        ]
      }
    ]
  },
  "info3": {
    "nodeType": "components.array.table",
    "keyName": "info3",
    "children": [
      {
        "nodeType": "components.string.input",
        "keyName": "name"
      },
      {
        "nodeType": "components.string.input",
        "keyName": "description"
      },
      {
        "nodeType": "components.object.fieldset",
        "keyName": "info",
        "children": [
          {
            "nodeType": "components.object.fieldset",
            "keyName": "info2",
            "children": [
              {
                "nodeType": "components.string.input",
                "keyName": "name2"
              }
            ]
          }
        ]
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object integration 9 1`] = `
{
  "info": {
    "nodeType": "components.object.fieldset",
    "keyName": "info",
    "children": [
      {
        "nodeType": "components.string.input",
        "keyName": "name"
      }
    ]
  }
}
`;
